:sparkles: Added GetWallet API implementation
