# docs/api-spec-oapi3.yaml
@@ -17,8 +17,8 @@ servers:
 tags:
   - name: transactions
     description: Everything about transactions
-  - name: balances
-    description: Everything about balances
+  - name: wallets
+    description: Everything about wallets
 
 paths:
   /transactions:
@@ -93,17 +93,17 @@ paths:
                 $ref: "#/components/schemas/Transaction"
   
   
-  /balances/{address}:
+  /wallets/{address}:
     get:
       tags:
-        - balances
-      summary: GetBalance
+        - wallets
+      summary: GetWalletBalance
       description: Get Ethereum address balance
       operationId: getEthBalanceById
       parameters:
         - name: address
           in: path
-          description: Ethereum address
+          description: Ethereum wallet address
           required: true
           schema:
             type: string
@@ -122,13 +122,13 @@ paths:
               schema:
                 $ref: "#/components/schemas/ErrInternalError"
         "200":
-          description: Balance was received successfully
+          description: Wallet information was received successfully
           content:
             application/json:
               schema:
                 type: array
                 items:
-                  $ref: "#/components/schemas/Balance"
+                  $ref: "#/components/schemas/Wallet"
 
 
 components:
@@ -173,9 +173,19 @@ components:
           format: date-time
           example: "2021-01-01T00:00:00Z"
     
-    Balance:
-      description: Ethereum address balance
+    Wallet:
+      description: Ethereum wallet information
       type: object
+      required:
+        - address
+        - balance
+      properties:
+        address:
+          description: Ethereum address of the wallet
+          type: string
+        balance:
+          description: Ethereum wallet balance
+          type: string
   
   
     ErrBadRequest:
