# internal/http/model_wallet.go
@@ -1,0 +1,41 @@
+/*
+ * Ethereum transactions manager
+ *
+ * Ethereum transactions manager
+ *
+ * API version: 1.0.0
+ * Contact: alewkinr@gmail.com
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package http
+
+// Wallet - Ethereum wallet information
+type Wallet struct {
+
+	// Ethereum address of the wallet
+	Address string `json:"address"`
+
+	// Ethereum wallet balance
+	Balance string `json:"balance"`
+}
+
+// AssertWalletRequired checks if the required fields are not zero-ed
+func AssertWalletRequired(obj Wallet) error {
+	elements := map[string]interface{}{
+		"address": obj.Address,
+		"balance": obj.Balance,
+	}
+	for name, el := range elements {
+		if isZero := IsZeroValue(el); isZero {
+			return &RequiredError{Field: name}
+		}
+	}
+
+	return nil
+}
+
+// AssertWalletConstraints checks if the values respects the defined constraints
+func AssertWalletConstraints(obj Wallet) error {
+	return nil
+}
